--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "start": "npm run build && npm run serve",
-    "serve": "node server/server.js"
+    "serve": "node dist/server/server.js",
+    "build:server": "tsc -p tsconfig.node.json"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
