--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.13.9",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
